# ScrimFinder

./: .gitignore  README.markdown  TEST.http  api_refactoring_spec.md  boot.sh  bruno_deploy.sh  bruno_shutdown.sh  clean_sqlite.py  deploy.sh  docker-compose.cloud-test.yml  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  inspect_db.py  inspect_db_sizes.py  main_protection.json  migrate.load  pyproject.toml  pytest.ini  rollback.sh  schema.sql  scrimfinder_full_bq_migration.md  shutdown.sh  test.sh  traefik_rules.yml  validate_cloud.ps1  verify.sh
analysis_service/: Dockerfile  README.markdown  README.md  auxiliar_scripts.ipynb  docker-compose.yaml  docker-compose.yml  export.py  grpc_client.py  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup_files.ps1  training_dashboard.html  training_service_pb2.py  training_service_pb2_grpc.py
analysis_service/analysis_api/: main.py
analysis_service/analysis_api/routers/: analysis.py  datasets.py  features.py  games.py  models.py  training.py
analysis_service/champion/: queries.py
analysis_service/core/: config.py  db.py  schemas.py
analysis_service/model_registry/: client.py  db.py
analysis_service/proto/: training_service.proto
analysis_service/registry/: client.py
analysis_service/routers/: analysis.py
analysis_service/shared/: schemas.py
analysis_service/tests/: analysis_bq_mock.py  conftest.py  pytest.ini  test_acceptance_contract.py  test_analysis.py  test_analysis_acceptance.py  test_analysis_integration.py  test_analysis_unit.py  test_api.py  test_integration_predictions.py  test_unit_queries.py  tests_dashboard.html
analysis_service/training/: data_loader.py  main.py  runner.py  train_build.py  train_draft.py  train_performance.py  training_dashboard.html
ansible/: hosts.ini  (+1 more)
jwt_manager/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
jwt_manager/core/: config.py  db.py  schemas.py  security.py
jwt_manager/routers/: auth.py
jwt_manager/tests/: jwt_bq_mock.py  test_acceptance_contract.py  test_jwt_acceptance.py  test_jwt_integration.py  test_jwt_manager.py  test_jwt_unit.py  test_unit_security.py
(+592 files in other folders)
