[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["champion", "core", "registry", "routers", "tests"]

[project]
name = "analysis-service"
version = "0.1.0"
description = "Analysis service for ScrimFinder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "google-cloud-bigquery>=3.20.0",
    "db-dtypes>=1.2.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "google-cloud-storage>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
]
