[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "routers", "tests"]

[project]
name = "jwt-manager"
version = "0.1.0"
description = "JWT Manager service for ScrimFinder"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "redis>=5.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff",
]
